<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="frameElevenVM" type="com.nomisapplication.app.modules.frameeleven.data.viewmodel.FrameElevenVM"/>
    </data>
    <FrameLayout android:id="@+id/frameStackrectangleten"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearColumnauthor"
            android:layout_gravity="top|center"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_marginEnd="@dimen/_8pxh"
            android:layout_width="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/linearColumnrectangleten"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                style="@style/groupStylecyan_200">
                <View android:background="@color/gray_100"
                    android:id="@+id/viewRectangleTen"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_10pxv" android:layout_width="@dimen/_414pxh"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowarrowleft"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_29pxv"
                    android:layout_marginEnd="@dimen/_30pxh"
                    android:layout_marginStart="@dimen/_30pxh"
                    android:layout_marginTop="@dimen/_38pxv"
                    android:layout_width="wrap_content" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageArrowleft"
                        android:layout_height="@dimen/_15pxh"
                        android:layout_marginBottom="@dimen/_14pxv"
                        android:layout_marginTop="@dimen/_12pxv"
                        android:layout_width="@dimen/_15pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_arrowleft"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtAddbook"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_74pxh"
                        android:layout_weight="0.91"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{frameElevenVM.frameElevenModel.txtAddbook}"
                        style="@style/txtRobotobold36" tools:text="@string/lbl_add_book"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearRowauthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_38pxv"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtAuthor"
                    style="@style/txtRobotobold24"
                    android:layout_width="12dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.28"
                    android:ellipsize="end"
                    android:text="@{frameElevenVM.frameElevenModel.txtAuthor}"
                    tools:text="@string/lbl_author" />

                <EditText
                    android:id="@+id/addAuthor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.72"
                    android:hint="Author"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearRowname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_20pxh"
                android:layout_marginEnd="@dimen/_19pxh"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtName"
                    style="@style/txtRobotobold24"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.26"
                    android:ellipsize="end"
                    android:text="@{frameElevenVM.frameElevenModel.txtName}"
                    tools:text="@string/lbl_name" />

                <EditText
                    android:id="@+id/addName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.72"
                    android:hint="Book Name"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowprice"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_17pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_20pxh"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPrice"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.24"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{frameElevenVM.frameElevenModel.txtPrice}"
                    style="@style/txtRobotobold24" tools:text="@string/lbl_price"/>

                <EditText
                    android:id="@+id/addPrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.72"
                    android:hint="Price"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/Genre"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_2pxh"
            android:layout_marginTop="@dimen/_20pxh"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView
                android:id="@+id/txtGenre"
                style="@style/txtRobotobold24"
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_17pxh"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@{frameElevenVM.frameElevenModel.txtGenre}"
                tools:text="@string/lbl_genre" />

            <EditText
                android:id="@+id/addGenre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.72"
                android:hint="Genre"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

            <LinearLayout android:id="@+id/linearRowlanguage"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguage"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.34"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{frameElevenVM.frameElevenModel.txtLanguage}"
                    style="@style/txtRobotobold24" tools:text="@string/lbl_language"/>

                <EditText
                    android:id="@+id/addLanguage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.72"
                    android:hint="Language"
                    android:inputType="text"

                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRownoofpages"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="match_parent" android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtNoOfPages"
                    style="@style/txtRobotobold24"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{frameElevenVM.frameElevenModel.txtNoOfPages}"
                    tools:text="@string/lbl_no_of_pages" />

                <EditText
                    android:id="@+id/addNoOfPages"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.72"
                    android:hint="No of pages"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRowlanguageOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguageOne"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{frameElevenVM.frameElevenModel.txtLanguageOne}"
                    style="@style/txtRobotobold24" tools:text="@string/lbl_published"/>

                <EditText
                    android:id="@+id/addPublished"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.72"
                    android:hint="Published Date"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowdescription"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="match_parent" android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtDescription"
                    style="@style/txtRobotobold24"
                    android:layout_width="95dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.39"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{frameElevenVM.frameElevenModel.txtDescription}"
                    tools:text="@string/lbl_description" />

                <EditText
                    android:id="@+id/addDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.72"
                    android:hint="Description"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <Button
                android:id="@+id/txtLanguageTwo"
                style="@style/txtSolidRounded_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ellipsize="end"
                android:layout_marginTop="@dimen/_30pxv"
                android:text="@{frameElevenVM.frameElevenModel.txtLanguageTwo}"
                tools:text="@string/lbl_add" />
        </LinearLayout>
    </FrameLayout>
</layout>
